# datacenter-api

./: .gitignore  Cargo.toml  embed.go  flake.nix  go.mod  go.sum  main.go  noembed.go  pool.go
src/: binary_cache.rs  config.rs  hosts.rs  ipmi.rs  main.rs  nar.rs  pxe.rs  store.rs
web/: .gitignore  index.html  package-lock.json  package.json
web/src/: App.tsx
