[package]
name = "datacenter-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-compression = { version = "0.4.36", features = ["tokio", "zstd"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-embed = "0.1.0"
camino = "1.2.2"
connection-pool = "0.3.7"
either = { version = "1.15.0", features = ["serde"] }
futures = "0.3.31"
http = "1.4.0"
ipmi-rs = "0.4.0"
nix-nar = "0.3.1"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rust-embed = { version = "8.9.0", features = ["axum"] }
serde = "1.0.228"
serde_json = "1.0.148"
tempdir = "0.3.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["io"] }
toml = "0.9.10"
tower-http = { version = "0.6.8", features = ["cors"] }
url = "2.5.7"

[patch.crates-io]
ipmi-rs = { git = 'https://github.com/plietar/ipmi-rs.git' }
