[package]
name = "datacenter-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-compression = { version = "0.4.36", features = ["tokio", "xz", "zstd"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-embed = "0.1.0"
axum-extra = { version = "0.12.5", features = ["erased-json", "middleware"] }
base64 = "0.22.1"
camino = "1.2.2"
clap = { version = "4.5.54", features = ["derive", "env"] }
connection-pool = "0.3.7"
derive_more = { version = "2.1.1", features = ["debug"] }
either = { version = "1.15.0", features = ["serde"] }
futures = "0.3.31"
hmac = "0.12.1"
http = "1.4.0"
ipmi-rs = "0.4.0"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rust-embed = { version = "8.9.0", features = ["axum"] }
serde = "1.0.228"
serde_json = "1.0.148"
sha2 = "0.10.9"
tempfile = "3.24.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["io"] }
toml = "0.9.10"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.7"

[patch.crates-io]
ipmi-rs = { git = 'https://github.com/plietar/ipmi-rs.git' }
